# axum-demo

./: Cargo.toml  endpoints.http
migrations/: V1__initial.sql
src/: database.rs  main.rs  options.rs  routes.rs  server.rs
src/database/: connection.rs  datetime.rs  repository.rs  users.rs  uuid.rs
src/database/repository/: login.rs
src/handlers/: health.rs
src/handlers/user/: create.rs  login.rs
src/routes/: auth.rs  health.rs  user.rs
