[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "signal"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
