[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["macros"] }
clap = { version = "4.3", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
